language/move-lang/tests/move_check/borrows/eq_unassigned_local.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/borrows/eq_unassigned_local.move:5:9
  │
4 │         let ref;
  │             --- The variable does not have a value due to this position. The variable must be assigned a value before being used
5 │         ref == &x;
  │         ^^^ Invalid usage of variable 'ref'

